force-app/main/default/objects/IndividualApplication/fields/Accepted_File_Storage_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accepted_File_Storage_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures if the applicant has accepted the terms and conditions set forth by HCR about the file storage and usage. This field will be only shown once to the applicant</description>
    <label>Accepted File Storage Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>