force-app/main/default/objects/IndividualApplication/fields/Affidavits_Non_Submission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Affidavits_Non_Submission_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affidavits Non-Submission Reason</label>
    <type>TextArea</type>
</CustomField>