force-app/main/default/objects/IndividualApplication/fields/Anticipation_Changes__c.field-meta.xml
<CustomField>
    <fullName>Anticipation_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anticipation Changes</label>
    <type>Checkbox</type>
</CustomField>