force-app/main/default/objects/IndividualApplication/fields/Anticipation_Changes_Description__c.field-meta.xml
<CustomField>
    <fullName>Anticipation_Changes_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipation Changes Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>