force-app/main/default/objects/IndividualApplication/fields/Appeal_Filed__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appeal Filed</label>
    <type>Checkbox</type>
</CustomField>