force-app/main/default/objects/IndividualApplication/fields/Appeal_Reject_Other__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Reject_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeal Rejection Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>