force-app/main/default/objects/IndividualApplication/fields/Appeal_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Rejection_Reason__c</fullName>
    <label>Appeal Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over Income</fullName>
            </value>
            <value>
                <fullName>Under Income</fullName>
            </value>
            <value>
                <fullName>No Units Available for Household Size</fullName>
            </value>
            <value>
                <fullName>Inconsistent/Unverifiable Household</fullName>
            </value>
            <value>
                <fullName>Failed Criminal Legal System Individualized Assessment</fullName>
            </value>
            <value>
                <fullName>Failed Credit Background Individualized Assessment</fullName>
            </value>
            <value>
                <fullName>Failure to Respond to Eligibility Appointment Letter</fullName>
            </value>
            <value>
                <fullName>Failure to Submit Documentation by Deadline date</fullName>
            </value>
            <value>
                <fullName>Self-Termination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>