force-app/main/default/objects/IndividualApplication/fields/Appeal_Rejection_Summary__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Rejection_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeal Rejection Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>