force-app/main/default/objects/IndividualApplication/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <description>Appeal Status indicates the outcome of the Applicant Appeal tied to the Applications</description>
    <inlineHelpText>Appeal Status indicates the outcome of the Applicant Appeal tied to the Application</inlineHelpText>
    <label>Appeal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Pending</fullName>
            </value>
            <value>
                <fullName>Appeal Successful</fullName>
            </value>
            <value>
                <fullName>Appeal Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>