force-app/main/default/objects/IndividualApplication/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Applicant__c.Type__c</field>
            <operation>equals</operation>
            <value>Primary Applicant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Individual Application</relationshipLabel>
    <relationshipName>Individual_Application</relationshipName>
    <type>Lookup</type>
</CustomField>