force-app/main/default/objects/IndividualApplication/fields/Applicant_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Cell_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Cell Phone</label>
    <type>Phone</type>
</CustomField>