force-app/main/default/objects/IndividualApplication/fields/Applicant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>