force-app/main/default/objects/IndividualApplication/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>