force-app/main/default/objects/IndividualApplication/fields/Applicant_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Home_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Home Phone</label>
    <type>Phone</type>
</CustomField>