force-app/main/default/objects/IndividualApplication/fields/Applicant_Relationship_ShareHolder__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Relationship_ShareHolder__c</fullName>
    <label>Applicant Relationship ShareHolder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Housing Counselor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>