force-app/main/default/objects/IndividualApplication/fields/Applicant_Tiles_Filter_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Tiles_Filter_Status__c</fullName>
    <formula>IF(
   AND(
      Appeal_Filed__c,
      ISPICKVAL(Appeal_Status__c, &quot;Appeal Pending&quot;)
   ),
   &quot;Appeal Filed&quot;,
   TEXT(Status)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Tiles Filter Status</label>
    <type>Text</type>
</CustomField>