force-app/main/default/objects/IndividualApplication/fields/Applicant_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Unit_Status__c</fullName>
    <label>Applicant Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>