force-app/main/default/objects/IndividualApplication/fields/ApplicantCount__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCount__c</fullName>
    <label>ApplicantCount</label>
    <summaryForeignKey>WaitlistApplicant__c.Individual_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>