force-app/main/default/objects/IndividualApplication/fields/ApplicantMovedDatetoApartment__c.field-meta.xml
<CustomField>
    <fullName>ApplicantMovedDatetoApartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Moved Date to Apartment</label>
    <type>Date</type>
</CustomField>