force-app/main/default/objects/IndividualApplication/fields/Application_Submitted_As__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_As__c</fullName>
    <label>Application Submitted As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper Based Application</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
                <default>true</default>
                <label>Online Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>