force-app/main/default/objects/IndividualApplication/fields/Applied_On__c.field-meta.xml
<CustomField>
    <fullName>Applied_On__c</fullName>
    <label>Applied On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Lottery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>