force-app/main/default/objects/IndividualApplication/fields/Calculated_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Rejected_Date__c</fullName>
    <formula>IF(
   AND(
      TODAY() - Rejected_Date__c &lt;= 14,
      Rejected_Date__c &lt;= TODAY()
   ),
   TRUE,
   FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Rejected Date</label>
    <type>Checkbox</type>
</CustomField>