force-app/main/default/objects/IndividualApplication/fields/Calculated_Unit_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Unit_Offered_Date__c</fullName>
    <formula>IF(
AND(
TODAY() - Unit_Offered_Date__c &lt;= 14,
Unit_Offered_Date__c &lt;= TODAY()
),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Unit Offered Date</label>
    <type>Checkbox</type>
</CustomField>