force-app/main/default/objects/IndividualApplication/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <displayFormat>CNF-{00000}</displayFormat>
    <label>Confirmation Number</label>
    <type>AutoNumber</type>
</CustomField>