force-app/main/default/objects/IndividualApplication/fields/Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person Phone</label>
    <type>Phone</type>
</CustomField>