force-app/main/default/objects/IndividualApplication/fields/Contact_Person_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Relationships__c</fullName>
    <label>Contact Person Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Housing Counselor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>