force-app/main/default/objects/IndividualApplication/fields/Create_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Create_Applicants__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Create Applicants</label>
    <length>25</length>
    <type>Text</type>
</CustomField>