force-app/main/default/objects/IndividualApplication/fields/Current_Living_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Living Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>