force-app/main/default/objects/IndividualApplication/fields/Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_Accepted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Accepted</label>
    <type>Date</type>
</CustomField>