force-app/main/default/objects/IndividualApplication/fields/Days_Since_Offered__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Offered__c</fullName>
    <formula>TODAY()-Unit_Offered_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>