force-app/main/default/objects/IndividualApplication/fields/DHCR_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DHCR_Approval_Status__c</fullName>
    <description>This is the DHCR Approval Status</description>
    <inlineHelpText>This is the DHCR Approval Status</inlineHelpText>
    <label>DHCR Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Approved by DHCR</fullName>
            </value>
            <value>
                <fullName>Rejected by DHCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>