force-app/main/default/objects/IndividualApplication/fields/Disapproval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disapproval_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>