force-app/main/default/objects/IndividualApplication/fields/File_Description__c.field-meta.xml
<CustomField>
    <fullName>File_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>