force-app/main/default/objects/IndividualApplication/fields/HasSubsidy__c.field-meta.xml
<CustomField>
    <fullName>HasSubsidy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSubsidy</label>
    <type>Checkbox</type>
</CustomField>