force-app/main/default/objects/IndividualApplication/fields/Household_has_a_Student__c.field-meta.xml
<CustomField>
    <fullName>Household_has_a_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household has a Student?</label>
    <type>Checkbox</type>
</CustomField>