force-app/main/default/objects/IndividualApplication/fields/Household_has_a_Veteran__c.field-meta.xml
<CustomField>
    <fullName>Household_has_a_Veteran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household has a Veteran?</label>
    <type>Checkbox</type>
</CustomField>