force-app/main/default/objects/IndividualApplication/fields/Household_needs_Hearing_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Household_needs_Hearing_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household needs Hearing Assistance?</label>
    <type>Checkbox</type>
</CustomField>