force-app/main/default/objects/IndividualApplication/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <label>Household Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>