force-app/main/default/objects/IndividualApplication/fields/IndApp_External_ID__c.field-meta.xml
<CustomField>
    <fullName>IndApp_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IndApp External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>