force-app/main/default/objects/IndividualApplication/fields/Individual_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_570, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_570)) &amp; &apos;s/individualapplication/&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Application URL</label>
    <type>Text</type>
</CustomField>