force-app/main/default/objects/IndividualApplication/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeal Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>