force-app/main/default/objects/IndividualApplication/fields/Is_Certification_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Certification_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Certification Done</label>
    <type>Checkbox</type>
</CustomField>