force-app/main/default/objects/IndividualApplication/fields/Is_Death_Certificate_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Death_Certificate_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Death Certificate Attached</label>
    <type>Checkbox</type>
</CustomField>