force-app/main/default/objects/IndividualApplication/fields/Is_Income_Affidavits_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Income_Affidavits_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Income Affidavits Attached</label>
    <type>Checkbox</type>
</CustomField>