force-app/main/default/objects/IndividualApplication/fields/Is_Mitchell_Lama__c.field-meta.xml
<CustomField>
    <fullName>Is_Mitchell_Lama__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mitchell Lama</label>
    <type>Checkbox</type>
</CustomField>