force-app/main/default/objects/IndividualApplication/fields/Is_Primary_Residance__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Residance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Residance</label>
    <type>Checkbox</type>
</CustomField>