force-app/main/default/objects/IndividualApplication/fields/Is_Shareholder_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Shareholder_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shareholder Deceased</label>
    <type>Checkbox</type>
</CustomField>