force-app/main/default/objects/IndividualApplication/fields/Is_Shareholder_Permanently_Vacate__c.field-meta.xml
<CustomField>
    <fullName>Is_Shareholder_Permanently_Vacate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shareholder Permanently Vacate</label>
    <type>Checkbox</type>
</CustomField>