force-app/main/default/objects/IndividualApplication/fields/Know_Your_Rights__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Rights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Know Your Rights</label>
    <type>Url</type>
</CustomField>