force-app/main/default/objects/IndividualApplication/fields/Last_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Approved Date</label>
    <type>Date</type>
</CustomField>