force-app/main/default/objects/IndividualApplication/fields/Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date__c</fullName>
    <formula>ADDMONTHS( Lease_Start_Date__c ,  CASE(
  Lease_Term__c,
  &quot;3 Months&quot;, 3,
  &quot;6 Months&quot;, 6,
  &quot;9 Months&quot;, 9,
  &quot;12 Months&quot;, 12,
  &quot;24 Months&quot;, 24,
  0
)
) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>