force-app/main/default/objects/IndividualApplication/fields/Message_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Applicant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message to Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>