force-app/main/default/objects/IndividualApplication/fields/Mobility_Group__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobility Group</label>
    <type>Checkbox</type>
</CustomField>