force-app/main/default/objects/IndividualApplication/fields/Move_Decision_Made__c.field-meta.xml
<CustomField>
    <fullName>Move_Decision_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move Decision Made?</label>
    <type>Checkbox</type>
</CustomField>