force-app/main/default/objects/IndividualApplication/fields/Move_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Move_Request_Status__c</fullName>
    <label>Move Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>