force-app/main/default/objects/IndividualApplication/fields/Move_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Move_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move Request Submitted</label>
    <type>Checkbox</type>
</CustomField>