force-app/main/default/objects/IndividualApplication/fields/Move_Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Request_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Move Request Submitted Date</label>
    <type>Date</type>
</CustomField>