force-app/main/default/objects/IndividualApplication/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Address</label>
    <type>TextArea</type>
</CustomField>