force-app/main/default/objects/IndividualApplication/fields/No_of_Times_Unit_Offered__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_Unit_Offered__c</fullName>
    <defaultValue>0000</defaultValue>
    <label>No. of Times Unit Offered</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>