force-app/main/default/objects/IndividualApplication/fields/Offer_Unit_Message__c.field-meta.xml
<CustomField>
    <fullName>Offer_Unit_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Unit Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>