force-app/main/default/objects/IndividualApplication/fields/Other_Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Other_Gender_Identity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Gender Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>