force-app/main/default/objects/IndividualApplication/fields/Other_Race__c.field-meta.xml
<CustomField>
    <fullName>Other_Race__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>