force-app/main/default/objects/IndividualApplication/fields/Other_Rental_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Other_Rental_Subsidy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Rental Subsidy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>