force-app/main/default/objects/IndividualApplication/fields/Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>