force-app/main/default/objects/IndividualApplication/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <formula>IF((ISPICKVAL(Status, &quot;Ready to be offered unit&quot;)) , &apos;Documents Submitted&apos;, TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>