force-app/main/default/objects/IndividualApplication/fields/Preferred_Language_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_of_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Language of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>